syntax = "proto3";
option go_package = "./genproto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Service {
  rpc PostCreate (PostCreateRequest) returns (google.protobuf.Empty) {}
}

enum PostStatus {
  POST_STATUS_ENABLE = 0;
  POST_STATUS_DISABLE = 1;
}

message PostCreateRequest {
  string user_no = 1;
  string title = 2;
  string content = 3;
  PostStatus status = 4;
  google.protobuf.Timestamp show_at = 5;
}